--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   
   <!-- Load the Angular Material stylesheet -->
-  <link href="https://unpkg.com/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet">
+  <link href="https://unpkg.com/@angular/material/prebuilt-themes/deeppurple-amber.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <style>body { font-family: Roboto, Arial, sans-serif; }</style>
+  <style>body { font-family: Roboto, Arial, sans-serif; margin: 0;}</style>
 </head>
 <body>
   <app-root></app-root>
